fix height of feed extra on mobile

--- a/client/sass/_settings.scss
+++ b/client/sass/_settings.scss
@@ -21,9 +21,9 @@ $standard-padding:          0.5em;
 $standard-margin:           emCalc(15px);
 $standard-small-margin:		emCalc(4px);
 $photo-feed-height-large:   400px;
-$photo-feed-height-small:   260px;
+$photo-feed-height-small:   340px;
 $map-height-large:          320px;
-$map-height-small:          220px;
+$map-height-small:          260px;
 $feed-extra-columns-large:  12;
 $feed-columns-large:        12;
 $ribbon-wrapper-strip:      emCalc(4px);
