--- a/client/stylesheets/app/feed.css
+++ b/client/stylesheets/app/feed.css
@@ -2280,7 +2280,7 @@ blockquote p {
   width: 100%;
   float: left;
   padding: 0;
-  height: 220px;
+  height: 260px;
 }
 @media only screen and (min-width: 48em) {
   /* line 200, ../../sass/app/feed.scss */
@@ -2300,7 +2300,7 @@ blockquote p {
 /* line 222, ../../sass/app/feed.scss */
 .feed-extra .map > .inner .alert-box {
   margin-top: 0em;
-  line-height: 200px;
+  line-height: 240px;
 }
 @media only screen and (min-width: 48em) {
   /* line 222, ../../sass/app/feed.scss */
@@ -2364,7 +2364,7 @@ blockquote p {
 }
 /* line 263, ../../sass/app/feed.scss */
 .feed-extra .gallery > .inner .recent-photos {
-  height: 260px;
+  height: 340px;
 }
 @media only screen and (min-width: 48em) {
   /* line 263, ../../sass/app/feed.scss */
